--- a/package.json
+++ b/package.json
@@ -64,19 +64,21 @@
     "chai": "3.5.0",
     "codecov": "1.0.1",
     "cross-env": "3.1.4",
-    "eslint": "3.14.0",
+    "eslint": "^3.19.0",
     "eslint-config-standard": "6.2.1",
+    "eslint-plugin-promise": "^3.7.0",
+    "eslint-plugin-standard": "^3.1.0",
     "greenkeeper-postpublish": "1.0.1",
     "mocha": "3.2.0",
     "mocha-junit-reporter": "1.13.0",
     "mochawesome": "2.0.2",
     "nodejs-dashboard": "0.3.0",
     "nodemon": "1.11.0",
+    "nsp": "2.6.2",
     "ntl": "1.1.3",
     "shx": "0.2.2",
     "sinon": "1.17.7",
     "sinon-chai": "2.8.0",
-    "nsp": "2.6.2",
     "standard-version": "4.0.0"
   },
   "repository": {
