--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "http-server src/",
+    "build": "babel src --out-dir dist && npm run browserify",
+    "browserify": "browserify dist/index.js > dist/bundle.js",
     "test": "test"
   },
   "repository": {
@@ -22,6 +24,16 @@
   },
   "homepage": "https://github.com/surfer-43/AgainstTheRageMachine#readme",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "http-server": "^0.11.1"
+  },
+  "dependencies": {
+    "browserify": "^16.2.0",
+    "watson-speech": "^0.34.1"
   }
 }
