--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "http-server": "^0.11.1"
   },
   "dependencies": {
+    "@google-cloud/speech": "^1.5.0",
     "browserify": "^16.2.0",
-    "watson-speech": "^0.34.1"
+    "watson-speech": "^0.34.1",
+    "whatwg-fetch": "^2.0.4"
   }
 }
