--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@google-cloud/speech": "^1.5.0",
     "browserify": "^16.2.0",
+    "chart.js": "^2.7.2",
     "watson-speech": "^0.34.1",
     "whatwg-fetch": "^2.0.4"
   }
