--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "http-server src/",
     "build": "babel src --out-dir dist && npm run browserify",
     "browserify": "browserify dist/index.js > dist/bundle.js",
+    "watch": "onchange 'src/*.js -- npm run build",
     "test": "test"
   },
   "repository": {
@@ -30,10 +31,10 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "http-server": "^0.11.1"
+    "http-server": "^0.11.1",
+    "npm-watch": "^0.3.0"
   },
   "dependencies": {
-    "@google-cloud/speech": "^1.5.0",
     "browserify": "^16.2.0",
     "watson-speech": "^0.34.1",
     "whatwg-fetch": "^2.0.4"
