--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "SF Hackathon",
   "main": "index.js",
   "scripts": {
-    "start": "http-server src/",
+    "start": "http-server dist/",
+    "server": "node dist/server.js",
     "build": "babel src --out-dir dist && npm run browserify",
     "browserify": "browserify dist/index.js > dist/bundle.js",
     "watch": "onchange 'src/*.js -- npm run build",
@@ -25,18 +26,22 @@
   },
   "homepage": "https://github.com/surfer-43/AgainstTheRageMachine#readme",
   "devDependencies": {
+    "axios": "^0.18.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "express": "^4.16.3",
     "http-server": "^0.11.1",
     "npm-watch": "^0.3.0"
   },
   "dependencies": {
     "browserify": "^16.2.0",
     "chart.js": "^2.7.2",
+    "cors": "^2.8.4",
+    "save-dev": "^2.0.0",
     "watson-speech": "^0.34.1",
     "whatwg-fetch": "^2.0.4"
   }
